# scraper-experiment

./: Dockerfile  README.md  pyproject.toml
scraper/: middlewares.py  schemas.py
scraper/configs/: constants.py  models.py
scraper/routes/: get_analysis.py  get_data.py  get_news.py  routers.py
scraper/services/: analysis_service.py  news_service.py
scraper/spiders/: news_spider.py
tests/routes/: __init__.py  test_api.py
tests/services/: __init__.py  test_analysis_service.py
