[project]
name = "scraper"
version = "0.1.0"
description = ""
authors = [{name = "Q", email = "phlacx@hotmail.com"}]
readme = "README.md"

[project.dependencies]
python = "^3.12"
blacksheep = "^2.0.7"
uvicorn = "^0.34.0"
gnews = "^0.3.9"
googlenewsdecoder = "^0.1.6"
google-generativeai = "^0.8.3"
tortoise-orm = {extras = ["aiosqlite"], version = "^0.23.0"}
newspaper3k = "^0.2.8"
python-dotenv = "^1.0.1"
pydantic = "^2.10.4"
python-daemon = "^3.1.2"
scrapy = "^2.11.0"
scrapydo = "^0.2.1"

[project.scripts]
server = "scraper.main:server"
daemon = "scraper.main:run_as_daemon"


[project.optional-dependencies.dev]
pytest = "^7.4"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
